--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 4000
 MONGODB_PATH = mongodb://127.0.0.1:27017/Grocery-Store
 SECRET_KEY = hjkdjndchhdyhdkdhdkdldkdud
+TWILIOACCOUNTSID = AC72039e4c7c55b20d9de8dfae5131d140
+TWILIOAUTHTOKEN = c5f60fd02afb84bb9ce905a7d2203260
+TWILIOPHONENUMBER = +13158885584
